syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

service User {
	rpc  GetUserInfo (UserInput) returns (UserModel);
	rpc  ServerInfo (UserInput) returns (UserModel);
}

message UserInput {
 int32 userId=1;
}
message UserModel {
	string UserName=1;
	string Email=2;
}

